Add automated VM creation feature
Major new feature:
- Auto-create VM if missing (configurable)
- Multiple installation methods: URL, ISO, PXE
- Kickstart and Cloud-init support
- Automatic VM startup if stopped
- Smart waiting for installation completion
- Comprehensive error handling and logging

Configuration (verification.conf):
- CREATE_VM_IF_MISSING flag to enable/disable
- VM specifications: memory, CPUs, disk size
- Installation source: network URL, ISO path, or PXE
- Optional kickstart file for automated setup
- Optional cloud-init files
- Network configuration

New functions in verify_flightctl_oidc.sh:
- check_vm_exists() - Check if VM is defined
- create_vm() - Create new VM with virt-install
- ensure_vm_exists() - Ensure VM exists and is running
- Modified get_vm_ip() to use ensure_vm_exists()

Benefits:
- Complete automation from VM creation to FlightCtl testing
- No manual VM setup required
- Perfect for CI/CD pipelines
- Easy to create fresh test environments
- Supports multiple Linux distributions

Documentation:
- VM_CREATION_GUIDE.md with complete usage examples
- Kickstart file samples
- Troubleshooting guide
- Best practices

--- a/verification.conf
+++ b/verification.conf
@@ -15,6 +15,35 @@ VM_NAME="eurolinux9"
 VM_USER="amalykhi"
 VM_PASSWORD=" "  # Single space character
 
+# VM Creation Parameters (used if VM doesn't exist)
+# Set CREATE_VM_IF_MISSING="true" to auto-create VM
+CREATE_VM_IF_MISSING="false"
+
+# VM specifications
+VM_MEMORY="4096"           # Memory in MB
+VM_CPUS="2"                # Number of vCPUs
+VM_DISK_SIZE="20"          # Disk size in GB
+VM_OS_VARIANT="rhel9.0"    # OS variant for virt-install
+
+# VM installation source
+# Options:
+#   - URL: http://mirror.example.com/path/to/repo
+#   - ISO: /path/to/iso/file.iso
+#   - PXE: network boot
+VM_INSTALL_SOURCE="https://dl.rockylinux.org/pub/rocky/9/BaseOS/x86_64/os/"
+
+# Network configuration
+VM_NETWORK="default"       # Libvirt network name
+
+# Cloud-init configuration (optional)
+# If provided, will use cloud-init for automated setup
+VM_CLOUD_INIT_USER_DATA=""  # Path to cloud-init user-data file
+VM_CLOUD_INIT_META_DATA=""  # Path to cloud-init meta-data file
+
+# Kickstart file (optional)
+# If provided, will use kickstart for automated installation
+VM_KICKSTART_FILE=""       # Path to kickstart file or URL
+
 # ============================================
 # FlightCtl RPM Configuration
 # ============================================
