Improve Keycloak health check with proper endpoint and port
Changes based on user feedback:

1. verification.conf:
   - Added KEYCLOAK_HEALTH_PORT=9000 (separate from main port 8080)
   - Added comments to clarify port purposes

2. setup_keycloak_oidc.sh:
   - Added KC_HEALTH_ENABLED=true environment variable to container
   - Added port mapping for health check port: -p 9000:9000
   - Updated health check to use port 9000 instead of 8080
   - Changed health check to /health/ready endpoint
   - Updated grep pattern to match proper JSON: '"status":\ "UP"'

Why these changes:
- Keycloak's health endpoints are on port 9000 by default
- The /health/ready endpoint is more accurate than general endpoint
- KC_HEALTH_ENABLED=true explicitly enables health endpoints
- Proper JSON matching ensures we get correct status

Health check now:
  curl -s http://localhost:9000/health/ready | grep '"status": "UP"'

This follows Keycloak best practices for health monitoring.

--- a/verification.conf
+++ b/verification.conf
@@ -66,8 +66,9 @@ COPR_DOWNLOAD_BASE="https://download.copr.fedorainfracloud.org/results/@redhat-e
 KEYCLOAK_ADMIN="admin"
 KEYCLOAK_ADMIN_PASSWORD="admin"
 
-# Keycloak port
-KEYCLOAK_PORT="8080"
+# Keycloak ports
+KEYCLOAK_PORT="8080"           # Main HTTP port
+KEYCLOAK_HEALTH_PORT="9000"    # Health check port
 
 # ============================================
 # OIDC Configuration
