--- a/verification.conf
+++ b/verification.conf
@@ -9,7 +9,9 @@
 # ============================================
 
 # Libvirt VM name
-VM_NAME="eurolinux9"
+VM_NAME="eurolinux9-test"
+# VM_NAME="eurolinux9"
+
 
 # VM SSH credentials
 VM_USER="amalykhi"
@@ -17,7 +19,7 @@ VM_PASSWORD=" "  # Single space character
 
 # VM Creation Parameters (used if VM doesn't exist)
 # Set CREATE_VM_IF_MISSING="true" to auto-create VM
-CREATE_VM_IF_MISSING="false"
+CREATE_VM_IF_MISSING="true"
 
 # VM specifications
 VM_MEMORY="4096"           # Memory in MB
@@ -42,7 +44,7 @@ VM_CLOUD_INIT_META_DATA=""  # Path to cloud-init meta-data file
 
 # Kickstart file (optional)
 # If provided, will use kickstart for automated installation
-VM_KICKSTART_FILE=""       # Path to kickstart file or URL
+VM_KICKSTART_FILE="/home/amalykhi/RPMs and OIDC/rocky9-kickstart.cfg"       # Path to kickstart file or URL
 
 # ============================================
 # FlightCtl RPM Configuration
