--- a/verification.conf
+++ b/verification.conf
@@ -9,7 +9,7 @@
 # ============================================
 
 # Libvirt VM name
-VM_NAME="eurolinux9-test"
+VM_NAME="eurolinux9"
 # VM_NAME="eurolinux9"
 
 
@@ -18,8 +18,8 @@ VM_USER="amalykhi"
 VM_PASSWORD=" "  # Single space character
 
 # VM Creation Parameters (used if VM doesn't exist)
-# Set CREATE_VM_IF_MISSING="true" to auto-create VM
-CREATE_VM_IF_MISSING="true"
+# TODO:  Set CREATE_VM_IF_MISSING="true" to auto-create VM
+CREATE_VM_IF_MISSING="false"
 
 # VM specifications
 VM_MEMORY="4096"           # Memory in MB
@@ -52,9 +52,11 @@ VM_KICKSTART_FILE="/home/amalykhi/RPMs and OIDC/rocky9-kickstart.cfg"       # Pa
 
 # RPM source URL or "LATEST" to auto-detect newest build
 # Examples:
-#   - "LATEST" (recommended)
-#   - "https://download.copr.fedorainfracloud.org/results/@redhat-et/flightctl-dev/epel-9-x86_64/09783358-flightctl/"
-RPM_SOURCE="LATEST"
+#   - "LATEST" (recommended - uses Copr)
+#   - Copr URL: "https://download.copr.fedorainfracloud.org/results/@redhat-et/flightctl-dev/epel-9-x86_64/09783358-flightctl/"
+#   - Brew task URL: "https://brewweb.engineering.redhat.com/brew/taskinfo?taskID=69283299"
+#   - Brew download URL: "https://download-01.beak-001.prod.iad2.dc.redhat.com/brewroot/work/tasks/3299/69283299/"
+RPM_SOURCE="https://brewweb.engineering.redhat.com/brew/taskinfo?taskID=69283299"
 
 # Copr repository configuration (for LATEST detection)
 COPR_BUILDS_URL="https://copr.fedorainfracloud.org/coprs/g/redhat-et/flightctl-dev/builds/"
