Add support for direct RPM file URLs

--- a/verification.conf
+++ b/verification.conf
@@ -55,7 +55,8 @@ VM_KICKSTART_FILE="/home/amalykhi/RPMs and OIDC/rocky9-kickstart.cfg"       # Pa
 #   - "LATEST" (recommended - uses Copr)
 #   - Copr URL: "https://download.copr.fedorainfracloud.org/results/@redhat-et/flightctl-dev/epel-9-x86_64/09783358-flightctl/"
 #   - Brew task URL: "https://brewweb.engineering.redhat.com/brew/taskinfo?taskID=69283299"
-#   - Brew download URL: "https://download-01.beak-001.prod.iad2.dc.redhat.com/brewroot/work/tasks/3299/69283299/"
+#   - Brew directory URL: "https://download-01.beak-001.prod.iad2.dc.redhat.com/brewroot/vol/rhel-9/packages/flightctl/0.10.0/1.el9em/x86_64/"
+#   - Direct RPM URL: "https://download-01.beak-001.prod.iad2.dc.redhat.com/brewroot/vol/rhel-9/packages/flightctl/0.10.0/1.el9em/x86_64/flightctl-services-0.10.0-1.el9em.x86_64.rpm"
 RPM_SOURCE="https://brewweb.engineering.redhat.com/brew/taskinfo?taskID=69283299"
 
 # Copr repository configuration (for LATEST detection)
