--- a/verification.conf
+++ b/verification.conf
@@ -52,7 +52,7 @@ VM_KICKSTART_FILE="/home/amalykhi/RPMs and OIDC/rocky9-kickstart.cfg"       # Pa
 
 # RPM source URL or "LATEST" to auto-detect newest build
 # Examples:
-#   - "LATEST" (recommended - uses Copr)
+#   - "LATEST" (recommended - uses Copr builds page: https://copr.fedorainfracloud.org/coprs/g/redhat-et/flightctl-dev/builds/)
 #   - Copr URL: "https://download.copr.fedorainfracloud.org/results/@redhat-et/flightctl-dev/epel-9-x86_64/09783358-flightctl/"
 #   - Brew task URL: "https://brewweb.engineering.redhat.com/brew/taskinfo?taskID=69283299"
 #   - Brew directory URL: "https://download-01.beak-001.prod.iad2.dc.redhat.com/brewroot/vol/rhel-9/packages/flightctl/0.10.0/1.el9em/x86_64/"
