Add FIPS mode support to verification script
- Add ENABLE_FIPS config option (true/false/verify)
- Add FIPS_REBOOT_WAIT config for reboot timeout
- Add check_fips_status() to check if FIPS is enabled
- Add verify_fips_mode() for detailed FIPS status
- Add enable_fips_mode() to enable FIPS with reboot handling
- Add handle_fips_configuration() as main FIPS handler
- Add FIPS status to verification report and final summary
- FIPS check runs after SSH is available, before RPM installation

--- a/verification.conf
+++ b/verification.conf
@@ -57,7 +57,7 @@ VM_KICKSTART_FILE="/home/amalykhi/RPMs and OIDC/rocky9-kickstart.cfg"       # Pa
 #   - Brew task URL: "https://brewweb.engineering.redhat.com/brew/taskinfo?taskID=69283299"
 #   - Brew directory URL: "https://download-01.beak-001.prod.iad2.dc.redhat.com/brewroot/vol/rhel-9/packages/flightctl/0.10.0/1.el9em/x86_64/"
 #   - Direct RPM URL: "https://download-01.beak-001.prod.iad2.dc.redhat.com/brewroot/vol/rhel-9/packages/flightctl/0.10.0/1.el9em/x86_64/flightctl-services-0.10.0-1.el9em.x86_64.rpm"
-RPM_SOURCE="https://brewweb.engineering.redhat.com/brew/taskinfo?taskID=69283299"
+RPM_SOURCE="https://download.copr.fedorainfracloud.org/results/@redhat-et/flightctl/epel-9-x86_64/09891919-flightctl/flightctl-services-1.0.0~rc2-1.el9.x86_64.rpm"
 
 # Copr repository configuration (for LATEST detection)
 COPR_BUILDS_URL="https://copr.fedorainfracloud.org/coprs/g/redhat-et/flightctl-dev/builds/"
@@ -100,6 +100,20 @@ TEST_EMAIL="testuser@example.com"
 #     "user1:pass1:user1@example.com"
 #     "user2:pass2:user2@example.com"
 # )
+
+# ============================================
+# FIPS Configuration
+# ============================================
+
+# Enable FIPS mode on the VM
+# Options:
+#   - "false" (default): Don't modify FIPS settings
+#   - "true": Enable FIPS mode (will reboot VM if needed)
+#   - "verify": Only verify FIPS status, don't enable
+ENABLE_FIPS="false"
+
+# Wait time after FIPS reboot (seconds)
+FIPS_REBOOT_WAIT="120"
 
 # ============================================
 # Advanced Options
