add pam-issuer auth check

--- a/verification.conf
+++ b/verification.conf
@@ -64,7 +64,38 @@ COPR_BUILDS_URL="https://copr.fedorainfracloud.org/coprs/g/redhat-et/flightctl-d
 COPR_DOWNLOAD_BASE="https://download.copr.fedorainfracloud.org/results/@redhat-et/flightctl-dev/epel-9-x86_64"
 
 # ============================================
-# Keycloak Configuration
+# Authentication Type Configuration
+# ============================================
+
+# Authentication type to use
+# Options:
+#   - "both" (default): Test both PAM Issuer and Keycloak
+#   - "pam": Use built-in PAM Issuer only (no external dependencies)
+#   - "keycloak": Use external Keycloak OIDC provider only
+#   - "none": Disable authentication
+AUTH_TYPE="both"
+
+# ============================================
+# PAM Issuer Configuration (AUTH_TYPE=pam)
+# ============================================
+
+# PAM Issuer user credentials (will be created automatically)
+PAM_USER="admin"
+PAM_PASSWORD="admin123"
+
+# PAM Issuer role for the user
+# Options: flightctl-admin, flightctl-operator, flightctl-viewer, flightctl-installer
+PAM_ROLE="flightctl-admin"
+
+# Additional PAM users (optional)
+# Format: "username:password:role"
+# PAM_USERS=(
+#     "operator1:pass1:flightctl-operator"
+#     "viewer1:pass2:flightctl-viewer"
+# )
+
+# ============================================
+# Keycloak Configuration (AUTH_TYPE=keycloak)
 # ============================================
 
 # Keycloak admin credentials
@@ -76,7 +107,7 @@ KEYCLOAK_PORT="8080"           # Main HTTP port
 KEYCLOAK_HEALTH_PORT="9000"    # Health check port
 
 # ============================================
-# OIDC Configuration
+# OIDC Configuration (AUTH_TYPE=keycloak)
 # ============================================
 
 # OIDC Realm name
@@ -86,10 +117,11 @@ OIDC_REALM="myrealm"
 OIDC_CLIENT_ID="my_client"
 
 # ============================================
-# Test User Configuration
+# Test User Configuration (AUTH_TYPE=keycloak)
 # ============================================
 
-# Test user credentials for OIDC authentication
+# Test user credentials for Keycloak OIDC authentication
+# (Only used when AUTH_TYPE=keycloak)
 TEST_USER="testuser"
 TEST_PASSWORD="password"
 TEST_EMAIL="testuser@example.com"
