add pam-issuer auth check

--- a/verification.conf
+++ b/verification.conf
@@ -148,6 +148,16 @@ ENABLE_FIPS="false"
 FIPS_REBOOT_WAIT="120"
 
 # ============================================
+# Cleanup Options
+# ============================================
+
+# Full cleanup before test (ensures fresh state)
+# Options:
+#   - "true": Remove all FlightCtl data, containers, volumes, Keycloak
+#   - "false" (default): Only reinstall RPMs, keep data
+FULL_CLEANUP="true"
+
+# ============================================
 # Advanced Options
 # ============================================
 
