Add Keycloak 26.x User Profile support for custom attributes
- Added User Profile configuration step before setting user attributes
  (required for Keycloak 26.x where custom attributes must be defined first)
- Fixed user creation to include all required fields (firstName, lastName)
- Updated verification.conf with Brew task URL
- Minor fixes to setup_keycloak_oidc.sh

Tested with flightctl-1.0.1-1.el9em from Brew task 69778566:
- PAM Issuer authentication: PASSED
- Keycloak OIDC authentication: PASSED

--- a/verification.conf
+++ b/verification.conf
@@ -57,7 +57,7 @@ VM_KICKSTART_FILE="/home/amalykhi/RPMs and OIDC/rocky9-kickstart.cfg"       # Pa
 #   - Brew task URL: "https://brewweb.engineering.redhat.com/brew/taskinfo?taskID=69283299"
 #   - Brew directory URL: "https://download-01.beak-001.prod.iad2.dc.redhat.com/brewroot/vol/rhel-9/packages/flightctl/0.10.0/1.el9em/x86_64/"
 #   - Direct RPM URL: "https://download-01.beak-001.prod.iad2.dc.redhat.com/brewroot/vol/rhel-9/packages/flightctl/0.10.0/1.el9em/x86_64/flightctl-services-0.10.0-1.el9em.x86_64.rpm"
-RPM_SOURCE="https://download.copr.fedorainfracloud.org/results/@redhat-et/flightctl/epel-9-x86_64/09891919-flightctl/flightctl-services-1.0.0~rc2-1.el9.x86_64.rpm"
+RPM_SOURCE="https://download-01.beak-001.prod.iad2.dc.redhat.com/brewroot/work/tasks/8639/69778639/"
 
 # Copr repository configuration (for LATEST detection)
 COPR_BUILDS_URL="https://copr.fedorainfracloud.org/coprs/g/redhat-et/flightctl-dev/builds/"
@@ -169,4 +169,8 @@ SERVICE_START_TIMEOUT="15"
 
 # Skip TLS verification (for testing only)
 INSECURE_SKIP_TLS_VERIFY="true"
+
+# Skip container image tag verification
+# Set to "true" to skip checking if container images match the installed RPM version
+SKIP_IMAGE_CHECK="true"
 
